# API-INFERENCE-IRIS

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: auth.py  core.py  logging_config.py  main.py  metrics.py  middleware.py  model_loader.py  rate_limit.py  schemas.py
app/models/: modelo_iris.pkl
app/prometheus/: alerts.yml  prometheus.yml
app/routers/: __init__.py  auth.py  info.py  predict.py
prometheus/: prometheus.yml
