[project]
name = "api-inference-iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "numpy>=2.0.0",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "pydantic==2.5.0",
    "pyjwt==2.8.0",
    "python-json-logger>=4.1.0",
    "python-multipart==0.0.6",
    "scikit-learn>=1.7.0",
    "uvicorn[standard]==0.24.0",
]
